# AutoDIagnostic

./: .gitignore  .replit  CLAUDE.md  README.md  app.py  config.py  database.py  install_obd2_deps.py  main.py  models.py  pyproject.toml  requirements.txt  run.py  test_app.py
attached_assets/: Pasted-Enhanced-Prompt-Automotive-Diagnostic-AI-Assistant-Role-Definition-You-are-an-advanced-Automotive-D-1746875435309.txt  Pasted-Okay-I-ve-transcribed-and-translated-your-Arabic-voice-message-Here-s-a-professional-prompt-for-an-1746878521072.txt
static/css/: custom.css
static/data/: diagnostic_data.json
static/js/: camera.js  main.js  voice.js
templates/: diagnostic.html  index.html  layout.html  results.html
templates/obd2/: aps_calibration.html  connect.html  dashboard.html  index.html  live_data.html  results.html  scan.html
utils/: diagnostic_ai.py  diagnostic_engine.py  dtc_database.py  image_processor.py  obd2_connector.py  speech_processor.py
